src/test/ui/resolve/resolve-assoc-suggestions.stderr
error[E0412]: cannot find type `field` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:26:16
   |
26 |         let _: field;
   |                ^^^^^ not found in this scope

error[E0531]: cannot find tuple struct/variant `field` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:29:13
   |
29 |         let field(..);
   |             ^^^^^ not found in this scope

error[E0425]: cannot find value `field` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:32:9
   |
32 |         field;
   |         ^^^^^ help: try: `self.field`

error[E0412]: cannot find type `Type` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:35:16
   |
35 |         let _: Type;
   |                ^^^^ help: try: `Self::Type`

error[E0531]: cannot find tuple struct/variant `Type` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:37:13
   |
37 |         let Type(..);
   |             ^^^^ not found in this scope

error[E0425]: cannot find value `Type` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:40:9
   |
40 |         Type;
   |         ^^^^ not found in this scope

error[E0412]: cannot find type `method` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:44:16
   |
44 |         let _: method;
   |                ^^^^^^ not found in this scope

error[E0531]: cannot find tuple struct/variant `method` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:47:13
   |
47 |         let method(..);
   |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `method` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:50:9
   |
50 |         method;
   |         ^^^^^^ help: try: `self.method`

error: aborting due to 9 previous errors

